# Course_Work_3

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: DBclass.py  api.py  utils.py
tests/: test_api.py  test_db_manager.py
