[project]
name = "course-work-3"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]


[tool.black]
line-length = 119
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Исключить папки и файлы (регулярные выражения)
  \.git

  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
# Использовать предустановленный профиль для совместимости с Black
profile = "black"

# Максимальная длина строки (должна совпадать с настройками Black и Flake8)
line_length = 119

# Список папок, которые считаются "своими" (первостепенными) для проекта
src_paths = ["src", "tests"]

# Группировка импортов: сначала стандартные библиотеки, затем сторонние, потом свои
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# Пропускать определенные файлы или папки
skip = [".venv", "build"]


[tool.mypy]
# Минимальная версия Python для проверки
python_version = "3.10"

# Строгий режим (включает большинство проверок)
strict = true

# Игнорировать отсутствие аннотаций в сторонних библиотеках
ignore_missing_imports = true

# Запретить функции без аннотаций типов
disallow_untyped_defs = true
warn_return_any = true

# Показывать коды ошибок (полезно для игнорирования конкретных строк через # type: ignore[code])
show_error_codes = true

# Список исключений (аналогично вашим настройкам в black)
exclude = [
    '\.venv',
    'build',
    'dist',
]